--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }],
 	"require":
 	{
-		"silverstripe/framework": "^4",
-		"silverstripe/cms": "^4"
+		"silverstripe/framework": "^4 || ^5",
+		"silverstripe/cms": "^4 || ^5"
 	}
 }
